# c-

./: README.md  git_push.bat
2017/: README.MD  callback.cpp
2017/Makefile/: README.MD  hellofunc.c  hellomake.c
2017/c++_features/: any.cpp  attributes_in_namespaces_and_enums.cpp  callback.cpp  class_tempalte_argument_deduction.cpp  class_tempalte_argument_deduction_2.cpp  constexpr_if.cpp  constexpr_if_14.cpp  constexpr_lambdas.cpp  fold_expression.cpp  fold_expression_14.cpp  logical_operation.cpp  non_type_template.cpp  structred_bindings.cpp  template_auto.cpp  template_auto_14.cpp  this.cpp  try_template.cpp  weak_prt.cpp
2017/code4speed/: HK_Camera.cpp  store_n_array_in_map.cpp
2018/: .README.MD.un~  README.MD~
2018/Qt/: font.cpp
2018/RTTR/: Rttr_ex 01.cpp  Rttr_ex03.cpp  (+1 more)
2018/eigen/: CMakeLists.txt
2018/eigen/src/: eigen_types.cpp  generic.cpp  hello_world.cpp  linear.cpp  rotate.cpp  zero.cpp
AT/: readme.md
bash/: fstab  resize_fdisk.md  socat.bash
code4speed/: CountCircles.cpp  leading_zero_naive.cpp
communit/: asyc.md  msg_client.cpp  msg_server.c  pipe.cpp  read_fifo.cpp  sem.cpp  shared_server.cpp  write_fifo.cpp
design/: factory.cpp  singleton.cpp
docker_server/: docker_systemctl_gui.sh  readme.md
dotfiles/: .vimrc
golang/: readtime.go
gstreamer/: gstreamer.md
iptables/: port_maping
log/: cout_test.cpp  redirected.txt
pacemarker/: config.xml  fencing.md  resources.md
python3/: test.py
switch/: h3c.cfg  h3c.md
template/: isprime.cpp  size.cpp  varusing.cpp
vim/: .vimrc  .ycm_extra_conf.py  init.toml  vimrc
(+183 files in other folders)
